<resources>
    <string name="app_name">Аренда Квартир</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_add_board">Add Board</string>

    <!-- Strings related to login -->
    <string name="title">Заголовок</string>
    <string name="region">Регион</string>
    <string name="desc">Описание</string>
    <string name="price">Цена</string>
    <string name="add_photo">Добавить фото</string>
    <string name="save">Сохранить</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
